--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,1 +1,73 @@
-<h1>CHATROOOM!</h1>
+<h4 align="center">
+  <div class="chatroom-icon"></div>
+  Say something!
+</h4>
+<div class="row">
+    <div class="col-10">
+      <div class="card chatbox">
+        <div class="card-body">
+          <div class="ui small feed">
+            <div class="event">
+              <div class="content">
+                <div class="summary">
+                  <a>Elliot Fu</a>
+                  added
+                  <a>Jenny Hess</a>
+                  as a friend
+                </div>
+              </div>
+            </div>
+            <div class="event">
+              <div class="content">
+                <div class="summary">
+                  <a>Stevie Feliciano</a>
+                  added
+                  <a>Elliot Fu</a>
+                  as a friend
+                </div>
+              </div>
+            </div>
+            <div class="event">
+              <div class="content">
+                <div class="summary">
+                  <a>Helen Troy</a>
+                  added
+                  <a>Christian Rocha</a>
+                  as a friend
+                </div>
+              </div>
+            </div>
+            <div class="event">
+              <div class="content">
+                <div class="summary">
+                  <a>Christian Rocha</a>
+                  signed up for the site.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="chatbox-divider"></div>
+        <div class="card-body input-field">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Enter a message...." aria-label="Recipient's username" aria-describedby="button-addon2">
+            <div class="input-group-append">
+              <div class="btn btn-outline-secondary btn-icon"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="card chatbox">
+        <div class="card-body">
+          <div class="users-menu">
+            <span class="dropdown-item-text">Online Users</span>
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
