--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item chatroom-tab">
-        <a class="nav-link" href="#">Chatroom <span class="sr-only">(current)</span></a>
+        <%= link_to "Chatroom", root_path, class: "nav-link" %>
       </li>
       <div class="divider"></div>
       <li class="nav-item">
@@ -23,14 +23,14 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Log out</a>
-          <a class="dropdown-item" href="#">Log in</a>
+          <%= link_to "Log in", login_path, class: "dropdown-item" %>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Sign up</a>
         </div>
       </li>
       </ul>
       <div class="divider right-divider"></div>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log in</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign up</button>
     </form>
   </div>
 </nav>
