--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -7,44 +7,16 @@
       <div class="card chatbox">
         <div class="card-body">
           <div class="ui small feed">
+          <% @message.each do |message| %>
             <div class="event">
               <div class="content">
                 <div class="summary">
-                  <a>Elliot Fu</a>
-                  added
-                  <a>Jenny Hess</a>
-                  as a friend
+                  <em><%= message.user.username %></em>:
+                  <%= message.body %>
                 </div>
               </div>
             </div>
-            <div class="event">
-              <div class="content">
-                <div class="summary">
-                  <a>Stevie Feliciano</a>
-                  added
-                  <a>Elliot Fu</a>
-                  as a friend
-                </div>
-              </div>
-            </div>
-            <div class="event">
-              <div class="content">
-                <div class="summary">
-                  <a>Helen Troy</a>
-                  added
-                  <a>Christian Rocha</a>
-                  as a friend
-                </div>
-              </div>
-            </div>
-            <div class="event">
-              <div class="content">
-                <div class="summary">
-                  <a>Christian Rocha</a>
-                  signed up for the site.
-                </div>
-              </div>
-            </div>
+          <% end %>
           </div>
         </div>
         <div class="chatbox-divider"></div>
