--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,15 +22,18 @@
           Account
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Log out</a>
-          <%= link_to "Log in", login_path, class: "dropdown-item" %>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Sign up</a>
+          <% if logged_in? %>
+            <%= link_to "Log out", logout_path, method: :delete, class: "dropdown-item" %>
+          <% else %>
+            <%= link_to "Log in", login_path, class: "dropdown-item" %>
+          <% end %>
         </div>
       </li>
       </ul>
       <div class="divider right-divider"></div>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign up</button>
+      <% if !logged_in? %>
+        <%= link_to "Log in", login_path, class: "btn btn-outline-success my-2 my-sm-0" %>
+      <% end %>
     </form>
   </div>
 </nav>
