--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -11,14 +11,16 @@
           </div>
         </div>
         <div class="chatbox-divider"></div>
-        <div class="card-body input-field">
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Enter a message...." aria-label="Recipient's username" aria-describedby="button-addon2">
-            <div class="input-group-append">
-              <div class="btn btn-outline-secondary btn-icon"></div>
+         <%= form_for(@message, html: {role: "form"}, url: message_path) do |f| %>
+          <div class="card-body input-field">
+            <div class="input-group mb-3">
+              <%= f.text_field :body, placeholder: "Enter a message...", class: "form-control" %>
+              <div class="input-group-append">
+                <%= f.button '<div class=""></div>'.html_safe, class: "btn btn-outline-secondary btn-icon" %>
+              </div>
             </div>
           </div>
-        </div>
+        <% end %>
       </div>
     </div>
     <div class="col-2">
