--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -140,6 +140,10 @@
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.125);
 }
 
+.card-body {
+  padding-bottom: 0;
+}
+
 .chatbox {
   height: 450px;
 }
@@ -180,7 +184,7 @@
   overflow: hidden;
   border-top: 1px solid #e9ecef;
   position: relative;
-  bottom: 11.3%;
+  bottom: 1.3%;
 }
 
 .mb-3, .my-3 {
@@ -465,4 +469,9 @@ div.icon {
 
 input {
   height: 30px;
+}
+
+#messages {
+  max-height: 385px;
+  overflow: auto;
 }
